kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /samiapp/?(.*)
        backend:
          serviceName: samiapp
          servicePort: 80
      - path: /samiapp2/?(.*)
        backend:
          serviceName: samiapp2
          servicePort: 80
